fixed margin on mobile and hid a couple things on the footer in mobile to make it take up less space.

--- a/src/css/Grid.css
+++ b/src/css/Grid.css
@@ -14,6 +14,14 @@
 /* Changed media query width here to be 768px */
 @media (max-width: 768px) {
 	.grid {
+		display: grid;
 		grid-template-columns: 1fr; /* One column for mobile */
+		gap: 20px;
+		margin: auto;
+		justify-items: center;
+		align-items: center;
+		row-gap: 4rem;
+		padding: 2rem;
+		padding-top: 10rem;
 	}
 }
